increased max-length of session-name section of tmux statusline

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -29,6 +29,9 @@ set -g window-status-format ' #I:#W '  # Show window index and name
 set -g window-status-current-format ' #I:#W* '  # Show current window index and name
 set -g window-status-current-style 'bg=#ad8434 fg=#272727 bold'
 
+# Give session-name section (left of statusline) more room
+set-option -g status-left-length 50
+
 # Keymaps
 
 # Keybind to reload the tmux config
