--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -50,8 +50,11 @@ bindsym $super+Shift+q kill
 # Start dmenu (a program launcher) with custom theme and JetBrains Nerd Font
 bindsym $super+d exec --no-startup-id "dmenu_run -nb '$bg' -nf '$yellow' -sb '$aqua' -sf '$darkgray' -fn 'JetBrainsMonoNL Nerd Font-10'"
 
-# PrintScreen key to use screenshot tool (flameshot)
+# Key to use screenshot tool (flameshot)
 bindsym $super+Shift+s exec --no-startup-id "flameshot gui"
+
+# Key to use colorpicker tool (xcolor)
+bindsym $super+Shift+e exec --no-startup-id "xcolor | xclip -selection clipboard"
 
 # change focus
 bindsym $super+h focus left
@@ -136,7 +139,6 @@ for_window [class="firefox"] move to workspace $ws2
 bindsym $super+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $super+Shift+r restart
-# exit i3 (logs you out of your X session)
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -191,9 +193,12 @@ bar {
     }
 }
 
-# Disable window=title but have borders instead
+# Disable window title but have borders instead
 default_border pixel 1
 default_floating_border pixel 1
+
+# Disable border for firefox browser window
+for_window [class="firefox"] border none
 
 # class                 border|backgr|text|indicator|child_border
 client.focused          #00000000 $yellow   #00000000 $lightyellow
