--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -38,11 +38,16 @@ set-option -g status-left-length 50
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-# vim-like pane switching
+# Vim-like pane switching
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
+
+# Swap position of windows
+bind P swap-window -t -1\; select-window -t -1
+bind N swap-window -t +\; select-window -t +1
+bind Tab last-window
 
 # Open panes in current directory
 bind '"' split-window -v -c '#{pane_current_path}'
