--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -49,10 +49,10 @@ bind P swap-window -t -1\; select-window -t -1
 bind N swap-window -t +\; select-window -t +1
 bind Tab last-window
 
+# Use Vim selection and copy paste technique for Tmux copy mode (Leader + [)
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Open panes in current directory
 bind '"' split-window -v -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
-
-# Use Vim selection and copy paste technique for Tmux copy mode
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
