minor changes to i3 status bar and few keybinding changes

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -19,7 +19,7 @@ command= ~/.config/i3blocks/temperature
 interval=30
 
 [simple-1]
-full_text=: :
+full_text=:
 color=#717171
 
 # Requires acpi -> sudo pacman -S acpi
@@ -29,7 +29,7 @@ label=BAT
 interval=5
 
 [simple-2]
-full_text=: :
+full_text=:
 color=#717171
 
 [pavucontrol]
@@ -40,10 +40,14 @@ command= ~/.config/i3blocks/volume
 instance=Master
 interval=1
 
+[simple-3]
+full_text=:
+color=#717171
+
 [time]
-command=date '+%a %d %b %H:%M:%S'
+command=date '+%H:%M:%S %a %d %b'
 interval=1
 
-[simple-3]
-full_text=: :
+[simple-4]
+full_text=:
 color=#717171
