--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -34,14 +34,17 @@ bindsym $alt+Shift+period exec systemctl suspend
 # Exit i3 completely (type startx to get back into i3 again)
 bindsym $alt+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# Start a terminal
+# Start terminal (kitty)
 bindsym $super+Return exec i3-sensible-terminal
+# Start browser (firefox)
+bindsym $super+b exec "firefox"
+# Start file-explorer (thunar)
+bindsym $super+e exec "thunar"
+# Start dmenu (a program launcher) with custom theme and JetBrains Nerd Font
+bindsym $super+d exec --no-startup-id "dmenu_run -nb '$bg' -nf '$yellow' -sb '$aqua' -sf '$darkgray' -fn 'JetBrainsMonoNL Nerd Font-10'"
 
 # kill focused window
 bindsym $super+Shift+q kill
-
-# Start dmenu (a program launcher) with custom theme and JetBrains Nerd Font
-bindsym $super+d exec --no-startup-id "dmenu_run -nb '$bg' -nf '$yellow' -sb '$aqua' -sf '$darkgray' -fn 'JetBrainsMonoNL Nerd Font-10'"
 
 # Key to use screenshot tool (flameshot)
 bindsym $super+Shift+s exec --no-startup-id "flameshot gui"
@@ -124,9 +127,6 @@ bindsym $super+Shift+7 move container to workspace number $ws7
 bindsym $super+Shift+8 move container to workspace number $ws8
 bindsym $super+Shift+9 move container to workspace number $ws9
 bindsym $super+Shift+0 move container to workspace number $ws10
-
-for_window [class="kitty"] move to workspace $ws1
-for_window [class="firefox"] move to workspace $ws2
 
 # reload the configuration file
 bindsym $super+Shift+c reload
