--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -56,3 +56,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # Open panes in current directory
 bind '"' split-window -v -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
+
+# Tmux-sessionizer script
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
