--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -17,13 +17,13 @@ floating_modifier $super
 focus_follows_mouse no
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +5%"
-bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -5%"
-bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_up
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_down
+bindsym XF86AudioMute exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_mute
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl --min-val=2 -q set 5%-
+bindsym XF86MonBrightnessUp exec --no-startup-id ~/.local/scripts/volume-brightness.sh brightness_up
+bindsym XF86MonBrightnessDown exec --no-startup-id ~/.local/scripts/volume-brightness.sh brightness_down
 
 # Lock Screen
 bindsym $alt+Shift+l exec "i3lock -i $HOME/Pictures/lock.png"
