--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -16,14 +16,17 @@ floating_modifier $super
 # Disable mouse-hover making windows focus
 focus_follows_mouse no
 
+# Path of the script
+set $volumeBrightnessScript ~/.local/scripts/volume-brightness.sh
+
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_up
-bindsym XF86AudioLowerVolume exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_down
-bindsym XF86AudioMute exec --no-startup-id ~/.local/scripts/volume-brightness.sh volume_mute
+bindsym XF86AudioRaiseVolume exec --no-startup-id $volumeBrightnessScript volume_up
+bindsym XF86AudioLowerVolume exec --no-startup-id $volumeBrightnessScript volume_down
+bindsym XF86AudioMute exec --no-startup-id $volumeBrightnessScript volume_mute
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id ~/.local/scripts/volume-brightness.sh brightness_up
-bindsym XF86MonBrightnessDown exec --no-startup-id ~/.local/scripts/volume-brightness.sh brightness_down
+bindsym XF86MonBrightnessUp exec --no-startup-id $volumeBrightnessScript brightness_up
+bindsym XF86MonBrightnessDown exec --no-startup-id $volumeBrightnessScript brightness_down
 
 # Lock Screen
 bindsym $alt+Shift+l exec "i3lock -i $HOME/Pictures/lock.png"
