--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,7 +10,7 @@ exec --no-startup-id dex --autostart --environment i3
 # Ensures screen-locker automatically activates when system is about to sleep
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # Dunst battery status
-exec --no-startup-id ~/.local/scripts/battery.sh
+exec --no-startup-id ~/.local/scripts/battery
 
 # Use Mouse+$super to drag floating windows to their wanted position
 floating_modifier $super
