added keymaps to resize panes in wezterm and tmux

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -49,6 +49,12 @@ bind P swap-window -t -1\; select-window -t -1
 bind N swap-window -t +\; select-window -t +1
 bind Tab last-window
 
+# Resize panes
+bind -r Left resize-pane -L 10
+bind -r Down resize-pane -D 5
+bind -r Up resize-pane -U 5
+bind -r Right resize-pane -R 10
+
 # Use Vim selection and copy paste technique for Tmux copy mode (Leader + [)
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
