fixed kitty xterm line

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,7 +2,8 @@
 shell /usr/bin/zsh
 
 # Terminal Color
-TERM: xterm-256color
+term xterm-kitty
+# term xterm-256color
 
 # Window
 window_padding_width 1
