--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ term xterm-kitty
 window_padding_width 1
 
 # Font
-font_family JetBrainsMonoNL Nerd Font
+font_family JetBrainsMono Nerd Font
 bold_font auto
 italic_font auto
 bold_italic_font auto
@@ -20,6 +20,7 @@ include current-theme.conf
 # Font Changes
 font_size 9
 adjust_line_height 2
+disable_ligatures always
 
 # Cursor Shape (IT IS ABSOLUTELY NECESSARY TO HAVE BLOCK CURSOR OKAY?)
 shell_integration no-cursor
