updated font related stuffs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,6 @@
+# Theme (Gruvbox obviously)
+include current-theme.conf
+
 # Shell
 shell /usr/bin/zsh
 
@@ -8,14 +11,11 @@ term xterm-kitty
 # Window
 window_padding_width 1
 
-# Font
+# Font (Font installed using https://github.com/getnf/getnf)
 font_family JetBrainsMono Nerd Font
-bold_font auto
-italic_font auto
-bold_italic_font auto
-
-# Theme (Gruvbox obviously)
-include current-theme.conf
+bold_font JetBrainsMonoNF-Bold
+italic_font JetBrainsMonoNF-Italic
+bold_italic_font JetBrainsMonoNF-BoldItalic
 
 # Font Changes
 font_size 9
