updated kitty and wezterm configs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# Theme (Gruvbox obviously)
+# Theme (Gruvbox)
 include current-theme.conf
 
 # Shell
@@ -12,7 +12,8 @@ term xterm-kitty
 window_padding_width 1
 
 # Font (Font installed using https://github.com/getnf/getnf)
-font_family JetBrainsMono Nerd Font
+# See Postscript name of the fonts with `kitty list-fonts`
+font_family JetBrainsMonoNF-Regular
 bold_font JetBrainsMonoNF-Bold
 italic_font JetBrainsMonoNF-Italic
 bold_italic_font JetBrainsMonoNF-BoldItalic
@@ -22,7 +23,7 @@ font_size 9
 adjust_line_height 2
 disable_ligatures always
 
-# Cursor Shape (IT IS ABSOLUTELY NECESSARY TO HAVE BLOCK CURSOR OKAY?)
+# Cursor Shape
 shell_integration no-cursor
 cursor_shape block
 cursor_beam_thickness 1
