tmux and kitty color updates

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,10 +24,10 @@ setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Tmux status bar styling
-set -g status-style 'bg=#333333 fg=#d79921'
+set -g status-style 'bg=#32302f fg=#d79921'
 set -g window-status-format ' #I:#W '  # Show window index and name
 set -g window-status-current-format ' #I:#W* '  # Show current window index and name
-set -g window-status-current-style 'bg=#ad8434 fg=#272727 bold'
+set -g window-status-current-style 'bg=#d79921 fg=#32302f bold'
 
 # Give session-name section (left of statusline) more room
 set-option -g status-left-length 50
