--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -27,6 +27,6 @@ color14                 #8ec07c
 color15                 #fbf1c7
 
 cursor                  #bdae93
-cursor_text_color       #665c54
+cursor_text_color       #504945
 
 url_color               #458588
