--- a/wezterm/.config/wezterm/colors/wezterm-theme.toml
+++ b/wezterm/.config/wezterm/colors/wezterm-theme.toml
@@ -2,34 +2,36 @@
 [colors]
 foreground = "#ebdbb2"
 background = "#282828"
+
+cursor_fg = "#504945"
 cursor_bg = "#bdae93"
 cursor_border = "#bdae93"
-cursor_fg = "#665c54"
-selection_bg = "#665c54"
-selection_fg = "#ebdbb2"
 
-ansi = ["#3c3836","#cc241d","#98971a","#d79921","#458588","#b16286","#689d6a","#a89984"]
-brights = ["#928374","#fb4934","#b8bb26","#fabd2f","#83a598","#d3869b","#8ec07c","#fbf1c7"]
+selection_fg = "#ebdbb2"
+selection_bg = "#665c54"
+
+ansi = ["#363836","#cc241d","#98971a","#d79921","#458588","#b16286","#689d6a","#fbf1c7"]
+brights = ["#928374","#fb4934","#b8bb26","#fabd2f","#83a598","#d3869b","#8ec07c","#a89984"]
 
 [colors.tab_bar]
-background = "#333333"
+background = "#32302f"
 
 [colors.tab_bar.active_tab]
-bg_color = "#ad8434"
-fg_color = "#272727"
+fg_color = "#32302f"
+bg_color = "#d79921"
 
 [colors.tab_bar.inactive_tab]
-bg_color = "#333333"
 fg_color = "#d79921"
-
-[colors.tab_bar.inactive_tab_hover]
-bg_color = "#454545"
-fg_color = "#d79921"
+bg_color = "#32302f"
 
 [colors.tab_bar.new_tab]
-bg_color = "#333333"
 fg_color = "#d79921"
+bg_color = "#32302f"
+
+[colors.tab_bar.inactive_tab_hover]
+fg_color = "#d79921"
+bg_color = "#3c3836"
 
 [colors.tab_bar.new_tab_hover]
-bg_color = "#454545"
 fg_color = "#d79921"
+bg_color = "#3c3836"
