--- a/wezterm/.config/wezterm/colors/wezterm-theme.toml
+++ b/wezterm/.config/wezterm/colors/wezterm-theme.toml
@@ -10,7 +10,7 @@ cursor_border = "#bdae93"
 selection_fg = "#ebdbb2"
 selection_bg = "#665c54"
 
-ansi = ["#363836","#cc241d","#98971a","#d79921","#458588","#b16286","#689d6a","#fbf1c7"]
+ansi = ["#363836","#cc241d","#98971a","#d79921","#458588","#b16286","#689d6a","#d5c4a1"]
 brights = ["#928374","#fb4934","#b8bb26","#fabd2f","#83a598","#d3869b","#8ec07c","#a89984"]
 
 [colors.tab_bar]
