feat(tmux): show prefix key in statusline when active

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -29,6 +29,9 @@ set -g window-status-format ' #I:#W '  # Show window index and name
 set -g window-status-current-format ' #I:#W* '  # Show current window index and name
 set -g window-status-current-style 'bg=#d79921 fg=#32302f bold'
 
+# Prefix key indicator on status-right
+set -g status-right '#{?client_prefix,<leader> , }'
+
 # Give session-name section (left of statusline) more room
 set-option -g status-left-length 50
 
