--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -25,12 +25,12 @@ set-option -g renumber-windows on
 
 # Tmux status bar styling
 set -g status-style 'bg=#32302f fg=#d79921'
-set -g window-status-format ' #I:#W '  # Show window index and name
-set -g window-status-current-format ' #I:#W* '  # Show current window index and name
+set -g window-status-format " #I:#W "  # Show window index and name
+set -g window-status-current-format " #I:#W* "  # Show current window index and name
 set -g window-status-current-style 'bg=#d79921 fg=#32302f bold'
 
 # Prefix key indicator on status-right
-set -g status-right '#{?client_prefix,<leader> , }'
+set -g status-right "#{?client_prefix,<leader> , }"
 
 # Give session-name section (left of statusline) more room
 set-option -g status-left-length 50
@@ -60,11 +60,12 @@ bind -r Right resize-pane -R 10
 
 # Use Vim selection and copy paste technique for Tmux copy mode (Leader + [)
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Open panes in current directory
-bind '"' split-window -v -c '#{pane_current_path}'
-bind '%' split-window -h -c '#{pane_current_path}'
+# Open panes and tabs in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Tmux-sessionizer script
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
