fix(mpv): show video name along side timestamps ui

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -20,6 +20,7 @@ osd-font='JetBrainsMono Nerd Font'
 osd-font-size=16
 osd-duration=2000
 osd-on-seek=msg-bar
+osd-status-msg="[${filename}] ${time-pos} / ${duration} (${percent-pos}%)"
 osd-bar=yes
 osd-bar-w=60
 osd-bar-h=3
