fix(mpv): fix mpv window closing on stop keymap

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,7 +1,7 @@
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
 # Playback
-ctrl+c stop                     # stop playback (quit or enter idle mode)
+? stop                          # stop playback (quit or enter idle mode)
 q quit                          # exit
 ctrl+w quit                     # exit
 Q quit-watch-later              # exit and remember the playback position
