feat(mpv): add looping of video and specific points

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,16 +1,18 @@
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
 # Playback
-? stop                          # stop playback (quit or enter idle mode)
-q quit                          # exit
-ctrl+w quit                     # exit
-Q quit-watch-later              # exit and remember the playback position
-f cycle fullscreen              # toggle fullscreen
-mbtn_left_dbl cycle fullscreen  # toggle fullscreen
-esc set fullscreen no           # leave fullscreen
-space cycle pause               # toggle pause/playback mode
-enter show-progress             # show playback progress
-/ cycle-values osd-level 0 1    # toggle UI
+? stop                              # stop playback (quit or enter idle mode)
+q quit                              # exit
+ctrl+w quit                         # exit
+Q quit-watch-later                  # exit and remember the playback position
+f cycle fullscreen                  # toggle fullscreen
+mbtn_left_dbl cycle fullscreen      # toggle fullscreen
+esc set fullscreen no               # leave fullscreen
+space cycle pause                   # toggle pause/playback mode
+enter show-progress                 # show playback progress
+/ cycle-values osd-level 0 1        # toggle UI
+\ ab-loop                           # set/clear A-B loop points
+i cycle-values loop-file "inf" "no" # toggle infinite looping
 
 # Utility
 s screenshot                    # take a screenshot of the video in its original resolution with subtitles
