fix(mpv): make seek keymaps exact

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -31,35 +31,35 @@ z-S add sub-scale +0.1    # increase the subtitle font size
 z-s add sub-scale -0.1    # decrease the subtitle font size
 
 # Playlist Control (p)
-p-n playlist-next                               # skip to the next file
-p-p playlist-prev                               # skip to the previous file
-p-[ set playlist-pos 0                          # skip to the first file
-p-] set playlist-pos-1 ${playlist-count}        # skip to the last file
-p-space show-text ${playlist}                   # show the playlist
+p-n playlist-next                         # skip to the next file
+p-p playlist-prev                         # skip to the previous file
+p-[ set playlist-pos 0                    # skip to the first file
+p-] set playlist-pos-1 ${playlist-count}  # skip to the last file
+p-space show-text ${playlist}             # show the playlist
 
 # Playback Control
-; frame-step                # advance one frame and pause
-, frame-back-step           # go back by one frame and pause
-l seek 5                    # seek 5 seconds forward
-h seek -5                   # seek 5 seconds backward
-right seek 5                # seek 5 seconds forward
-left seek -5                # seek 5 seconds backward
-wheel_right seek 10         # seek 10 seconds forward
-wheel_left seek -10         # seek 10 seconds backward
-L seek 60 exact             # seek exactly 60 second forward
-H seek -60 exact            # seek exactly 60 second backward
-right seek 60 exact         # seek exactly 60 second forward
-left seek -60 exact         # seek exactly 60 second backward
-0 seek 0 absolute-percent   # seek exactly 0% of the video
-1 seek 10 absolute-percent  # seek exactly 10% of the video
-2 seek 20 absolute-percent  # seek exactly 20% of the video
-3 seek 30 absolute-percent  # seek exactly 30% of the video
-4 seek 40 absolute-percent  # seek exactly 40% of the video
-5 seek 50 absolute-percent  # seek exactly 50% of the video
-6 seek 60 absolute-percent  # seek exactly 60% of the video
-7 seek 70 absolute-percent  # seek exactly 70% of the video
-8 seek 80 absolute-percent  # seek exactly 80% of the video
-9 seek 90 absolute-percent  # seek exactly 90% of the video
+; frame-step                      # advance one frame and pause
+, frame-back-step                 # go back by one frame and pause
+l seek 5 exact                    # seek 5 seconds forward
+h seek -5 exact                   # seek 5 seconds backward
+right seek 5 exact                # seek 5 seconds forward
+left seek -5 exact                # seek 5 seconds backward
+wheel_right seek 10 exact         # seek 10 seconds forward
+wheel_left seek -10 exact         # seek 10 seconds backward
+L seek 60 exact                   # seek exactly 60 second forward
+H seek -60 exact                  # seek exactly 60 second backward
+shift+right seek 60 exact         # seek exactly 60 second forward
+shift+left seek -60 exact         # seek exactly 60 second backward
+0 seek 0 absolute-percent+exact   # seek exactly 0% of the video
+1 seek 10 absolute-percent+exact  # seek exactly 10% of the video
+2 seek 20 absolute-percent+exact  # seek exactly 20% of the video
+3 seek 30 absolute-percent+exact  # seek exactly 30% of the video
+4 seek 40 absolute-percent+exact  # seek exactly 40% of the video
+5 seek 50 absolute-percent+exact  # seek exactly 50% of the video
+6 seek 60 absolute-percent+exact  # seek exactly 60% of the video
+7 seek 70 absolute-percent+exact  # seek exactly 70% of the video
+8 seek 80 absolute-percent+exact  # seek exactly 80% of the video
+9 seek 90 absolute-percent+exact  # seek exactly 90% of the video
 
 # Video Position
 ctrl+l add video-pan-x 0.01   # move the video right
@@ -67,8 +67,8 @@ ctrl+h add video-pan-x -0.01  # move the video left
 ctrl+j add video-pan-y 0.01   # move the video down
 ctrl+k add video-pan-y -0.01  # move the video up
 ctrl+wheel_up script-binding positioning/cursor-centric-zoom 0.1    # zoom in towards the cursor
-ctrl+wheel_down script-binding positioning/cursor-centric-zoom -0.1 # zoom out towards the cursor
 ctrl+= set video-zoom 0; no-osd set panscan 0; no-osd set video-pan-x 0; no-osd set video-pan-y 0; no-osd set video-align-x 0; no-osd set video-align-y 0 # reset zoom and pan settings
+ctrl+wheel_down script-binding positioning/cursor-centric-zoom -0.1 # zoom out towards the cursor
 A cycle-values video-aspect-override "16:9" "4:3" "2.35:1" "no" # cycle the video aspect ratio
 
 # Playback Speed
