feat(mpv): add 1 second seek keymaps

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -40,6 +40,10 @@ p-space show-text ${playlist}             # show the playlist
 # Playback Control
 ; frame-step                      # advance one frame and pause
 , frame-back-step                 # go back by one frame and pause
+alt+l seek 1 exact                # seek exactly 1 second forward
+alt+h seek -1 exact                # seek exactly 1 second backward
+alt+right seek 1 exact            # seek exactly 1 second forward
+alt+left seek -1 exact             # seek exactly 1 second backward
 l seek 5 exact                    # seek 5 seconds forward
 h seek -5 exact                   # seek 5 seconds backward
 right seek 5 exact                # seek 5 seconds forward
