feat(i3): add timer utility for i3

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -48,3 +48,11 @@ interval=1
 [simple-4]
 full_text=:
 color=#717171
+
+[timer]
+command= ~/.config/i3blocks/timer
+interval=1
+
+[simple-5]
+full_text=:
+color=#717171
