--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -17,7 +17,7 @@ geometry=50%:50%
 # UI
 osc=no
 osd-level=1
-osd-font='JetBrainsMono Nerd Font'
+osd-font='JetBrainsMono NF'
 osd-font-size=16
 osd-duration=2000
 osd-on-seek=msg-bar
