--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -30,8 +30,8 @@ bindsym XF86AudioMute exec --no-startup-id $volumeBrightnessScript volume_mute
 bindsym XF86MonBrightnessUp exec --no-startup-id $volumeBrightnessScript brightness_up
 bindsym XF86MonBrightnessDown exec --no-startup-id $volumeBrightnessScript brightness_down
 
-# Lock Screen
-bindsym $alt+Shift+l exec --no-startup-id i3lock -i "$XDG_PICTURES_DIR/wallpapers/lock.png"
+# Lock Screen (enable pointer)
+bindsym $alt+Shift+l exec --no-startup-id i3lock -p default -i "$XDG_PICTURES_DIR/wallpapers/lock.png"
 
 # Suspend System
 bindsym $alt+Shift+period exec --no-startup-id systemctl suspend
