refactor(i3): change separator character to |

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -18,8 +18,8 @@ label=TEMP
 command= ~/.config/i3blocks/temperature
 interval=30
 
-[simple-1]
-full_text=:
+[simple-2]
+full_text=|
 color=#717171
 
 # Requires acpi -> sudo pacman -S acpi
@@ -28,8 +28,8 @@ command= ~/.config/i3blocks/battery
 label=BAT 
 interval=5
 
-[simple-2]
-full_text=:
+[simple-3]
+full_text=|
 color=#717171
 
 [volume-pulseaudio]
@@ -37,16 +37,16 @@ command= ~/.config/i3blocks/volume
 instance=Master
 interval=1
 
-[simple-3]
-full_text=:
+[simple-4]
+full_text=|
 color=#717171
 
 [time]
-command=date '+%H:%M:%S %a %d %b'
+command=date '+  %H:%M:%S | 󰃭 %a %d %b'
 interval=1
 
-[simple-4]
-full_text=:
+[simple-5]
+full_text=|
 color=#717171
 
 [timer]
