--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -2,6 +2,17 @@
 separator=false
 markup=pango
 
+[bandwidth]
+command= ~/.config/i3blocks/bandwidth
+interval=3
+# INTERFACE=eth0
+# INLABEL=󰇚
+# OUTLABEL=󰕒
+
+[simple-1]
+full_text=|
+color=#717171
+
 [memory]
 label=MEM 
 command= ~/.config/i3blocks/memory
@@ -53,6 +64,15 @@ color=#717171
 command= ~/.config/i3blocks/timer
 interval=1
 
-[simple-5]
-full_text=:
+[simple-6]
+full_text=|
+color=#717171
+
+[brightness]
+command= ~/.config/i3blocks/brightness
+interval=once
+signal=2
+
+[simple-7]
+full_text=|
 color=#717171
