update!: replace pulse-audio with pipewire-audio

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -43,10 +43,10 @@ interval=5
 full_text=|
 color=#717171
 
-[volume-pulseaudio]
+[volume-pipewire]
 command= ~/.config/i3blocks/volume
-instance=Master
-interval=1
+interval=once
+signal=1
 
 [simple-4]
 full_text=|
