--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -21,13 +21,16 @@ floating_modifier $super
 # Disable mouse-hover making windows focus
 focus_follows_mouse no
 
-# Path of the script
-set $volumeBrightnessScript ~/.local/bin/volume-brightness
+# Pipewire-pulse Audio Control
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle; exec --no-startup-id pkill -RTMIN+1 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +1%; exec --no-startup-id pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -1%; exec --no-startup-id pkill -RTMIN+1 i3blocks
 
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id $volumeBrightnessScript volume_up
-bindsym XF86AudioLowerVolume exec --no-startup-id $volumeBrightnessScript volume_down
-bindsym XF86AudioMute exec --no-startup-id $volumeBrightnessScript volume_mute
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # Brightness control
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl -q set +1%; exec --no-startup-id pkill -RTMIN+2 i3blocks
