--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -68,8 +68,9 @@ bindsym $super+Shift+f focus parent; focus child
 bindsym $super+Shift+s exec --no-startup-id "flameshot gui"
 # bindsym $super+Shift+s exec "env QT_ENABLE_HIGHDPI_SCALING=0 flameshot gui"
 
-# Key to use colorpicker tool (xcolor)
-bindsym $super+Shift+e exec --no-startup-id "xcolor | tr -d '\n' | xclip -selection clipboard"
+# Key to use colorpicker tool (xcolor, imagick)
+# bindsym $super+Shift+e exec --no-startup-id "xcolor | tr -d '\n' | xclip -selection clipboard"
+bindsym $super+Shift+e exec --no-startup-id ~/.local/bin/colorpicker
 
 # Webcam Script
 bindsym $super+w exec --no-startup-id ~/.local/bin/webcam
