chore: add package info, add comments on scripts etc

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -68,6 +68,7 @@ interval=1
 full_text=|
 color=#717171
 
+# Requires brightnessctl -> sudo pacman -S brightnessctl
 [brightness]
 command= ~/.config/i3blocks/brightness
 interval=once
