feat(i3): add record status

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -77,3 +77,10 @@ signal=2
 [simple-7]
 full_text=|
 color=#717171
+
+[record-status]
+command= [[ -e /tmp/recordingpid ]] && echo "REC"
+label= 
+interval=once
+signal=3
+color=#FF0000
