--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -21,20 +21,24 @@ floating_modifier $super
 # Disable mouse-hover making windows focus
 focus_follows_mouse no
 
+# Media Control Script
+set $mediacontrol ~/.local/bin/mediacontrol
+
 # Pipewire-pulse Audio Control
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle; exec --no-startup-id pkill -RTMIN+1 i3blocks
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +1%; exec --no-startup-id pkill -RTMIN+1 i3blocks
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -1%; exec --no-startup-id pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec --no-startup-id $mediacontrol volume_mute; exec --no-startup-id pkill -RTMIN+1 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id $mediacontrol volume_up; exec --no-startup-id pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume  exec --no-startup-id $mediacontrol volume_down; exec --no-startup-id pkill -RTMIN+1 i3blocks
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlayPause exec --no-startup-id $mediacontrol play_pause
+bindsym XF86AudioPause exec --no-startup-id $mediacontrol play_pause
+bindsym XF86AudioPlay exec --no-startup-id $mediacontrol play_pause
+bindsym XF86AudioNext exec --no-startup-id $mediacontrol next_track
+bindsym XF86AudioPrev exec --no-startup-id $mediacontrol prev_track
 
 # Brightness control
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl -q set +1%; exec --no-startup-id pkill -RTMIN+2 i3blocks
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl --min-val=1 -q set 1%-; exec --no-startup-id pkill -RTMIN+2 i3blocks
+bindsym XF86MonBrightnessUp exec --no-startup-id $mediacontrol brightness_up; exec --no-startup-id pkill -RTMIN+2 i3blocks
+bindsym XF86MonBrightnessDown exec --no-startup-id $mediacontrol brightness_down; exec --no-startup-id pkill -RTMIN+2 i3blocks
 
 # Lock Screen (enable pointer)
 bindsym $alt+Shift+l exec --no-startup-id i3lock -p default -i "$XDG_PICTURES_DIR/wallpapers/lock.png"
