--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -71,6 +71,7 @@ color=#717171
 # Requires brightnessctl -> sudo pacman -S brightnessctl
 [brightness]
 command= ~/.config/i3blocks/brightness
+label=󰃠 
 interval=once
 signal=2
 
