chore: give credits to source of scripts

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -1,3 +1,4 @@
+# Scripts were modified from https://github.com/vivien/i3blocks-contrib
 # The top properties below are applied to every block, but can be overridden.
 separator=false
 markup=pango
