--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -30,5 +30,6 @@ osd-bar-align-y=0.8
 
 # Screenshot
 screenshot-directory=/home/priyanshu/Pictures/mpv-screenshots
-screenshot-format=png
+# screenshot-directory=C:\Users\priyanshu\Pictures\mpv-screenshots
+screenshot-format=jpg
 screenshot-template='%F-%P'
