fix(picom): turn off shadow on hover windows

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -64,6 +64,7 @@ wintypes: {
 	menu = { fade = true; shadow = false; };
 	popup_menu = { opacity = 0.95; shadow = false; }
 	dropdown_menu = { opacity = 0.95; shadow = false; }
+	utility = { shadow = false; };
 };
 
 # rules: (
