fix(i3): fix name of battery notification script

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -238,4 +238,4 @@ client.urgent            $red       $red       $darkgray  $red
 gaps inner 5
 
 # Dunst batterynotif
-exec --no-startup-id ~/.local/bin/battery
+exec --no-startup-id ~/.local/bin/batterynotif
