update(picom): disable frame opacity

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -15,7 +15,7 @@ fade-delta = 4
 # no-fading-destroyed-argb = false
 
 # Transparency/Opacity
-frame-opacity = 0.9;
+# frame-opacity = 0.9;
 # inactive-dim-fixed = true
 
 # Corners
