--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -84,6 +84,18 @@ bindsym $super+w exec --no-startup-id ~/.local/bin/webcam
 # Usb Script
 bindsym $super+u exec --no-startup-id ~/.local/bin/usb
 
+# Mode launcher
+# set $mode_launcher Launch: [f]irefox [k]itty
+# bindsym $super+o mode "$mode_launcher"
+#
+# mode "$mode_launcher" {
+# 	bindsym f exec firefox
+# 	bindsym k exec kitty
+#
+# 	bindsym Escape mode "default"
+# 	bindsym Return mode "default"
+# }
+
 # change focus
 bindsym $super+h focus left
 bindsym $super+j focus down
@@ -191,6 +203,7 @@ mode "resize" {
 }
 
 bindsym $super+r mode "resize"
+# Use $alt+leftmousebutton or $super+rightmousebutton to drag and resize with mouse
 
 # Set Gruvbox colorscheme colors
 set $bg #282828
