feat(i3blocks): add active window script

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -3,6 +3,15 @@
 separator=false
 markup=pango
 
+[window]
+label=[]= 
+command= ~/.config/i3blocks/activewindow 25
+interval=persist
+
+[simple-1]
+full_text=|
+color=#717171
+
 [bandwidth]
 command= ~/.config/i3blocks/bandwidth
 interval=3
@@ -10,7 +19,7 @@ interval=3
 # INLABEL=󰇚
 # OUTLABEL=󰕒
 
-[simple-1]
+[simple-2]
 full_text=|
 color=#717171
 
@@ -30,7 +39,7 @@ label=TEMP
 command= ~/.config/i3blocks/temperature
 interval=30
 
-[simple-2]
+[simple-3]
 full_text=|
 color=#717171
 
@@ -40,7 +49,7 @@ command= ~/.config/i3blocks/battery
 label=BAT 
 interval=5
 
-[simple-3]
+[simple-4]
 full_text=|
 color=#717171
 
@@ -49,7 +58,7 @@ command= ~/.config/i3blocks/volume
 interval=once
 signal=1
 
-[simple-4]
+[simple-5]
 full_text=|
 color=#717171
 
@@ -57,7 +66,7 @@ color=#717171
 command=date '+  %H:%M:%S | 󰃭 %a %d %b'
 interval=1
 
-[simple-5]
+[simple-6]
 full_text=|
 color=#717171
 
@@ -65,7 +74,7 @@ color=#717171
 command= ~/.config/i3blocks/timer
 interval=1
 
-[simple-6]
+[simple-7]
 full_text=|
 color=#717171
 
@@ -76,7 +85,7 @@ label=󰃠
 interval=once
 signal=2
 
-[simple-7]
+[simple-8]
 full_text=|
 color=#717171
 
