fix(i3blocks): fix high cpu usage by replacing window script with xtitle

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -3,9 +3,10 @@
 separator=false
 markup=pango
 
+# Requires xtitle from AUR -> yay -S xtitle
 [window]
 label=[]= 
-command= ~/.config/i3blocks/activewindow 25
+command= xtitle -s -t 25
 interval=persist
 
 [simple-1]
