feat(i3blocks): add separate script for record status

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -91,7 +91,7 @@ full_text=|
 color=#717171
 
 [record-status]
-command= [[ -e /tmp/recordingpid ]] && echo "REC"
+command= ~/.config/i3blocks/record-status
 label= 
 interval=once
 signal=3
