--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -30,12 +30,12 @@ command= ~/.config/i3blocks/memory
 interval=2
 
 # Requires sysstat -> sudo pacman -S sysstat
-[cpu_usage]
+[cpu-usage]
 label=CPU 
-command= ~/.config/i3blocks/cpu_usage
+command= ~/.config/i3blocks/cpu
 interval=2
 
-[CPU-temperature]
+[cpu-temperature]
 label=TEMP 
 command= ~/.config/i3blocks/temperature
 interval=30
