update(i3blocks): use built-in separator instead of using custom texts

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -1,6 +1,7 @@
 # Scripts were modified from https://github.com/vivien/i3blocks-contrib
 # The top properties below are applied to every block, but can be overridden.
-separator=false
+separator=true
+separator_block_width=25
 markup=pango
 
 # Requires xtitle from AUR -> yay -S xtitle
@@ -9,20 +10,12 @@ label=[]=
 command= xtitle -s -t 25
 interval=persist
 
-[simple-1]
-full_text=|
-color=#717171
-
 [bandwidth]
 command= ~/.config/i3blocks/bandwidth
 interval=3
 # INTERFACE=eth0
 # INLABEL=󰇚
 # OUTLABEL=󰕒
-
-[simple-2]
-full_text=|
-color=#717171
 
 [memory]
 label=MEM 
@@ -40,44 +33,24 @@ label=TEMP
 command= ~/.config/i3blocks/temperature
 interval=30
 
-[simple-3]
-full_text=|
-color=#717171
-
 # Requires acpi -> sudo pacman -S acpi
 [battery]
 command= ~/.config/i3blocks/battery
 label=BAT 
 interval=5
 
-[simple-4]
-full_text=|
-color=#717171
-
 [volume-pipewire]
 command= ~/.config/i3blocks/volume
 interval=once
 signal=1
 
-[simple-5]
-full_text=|
-color=#717171
-
 [time]
-command=date '+  %H:%M:%S | 󰃭 %a %d %b'
+command=date '+  %H:%M:%S / 󰃭 %a %d %b'
 interval=1
-
-[simple-6]
-full_text=|
-color=#717171
 
 [timer]
 command= ~/.config/i3blocks/timer
 interval=1
-
-[simple-7]
-full_text=|
-color=#717171
 
 # Requires brightnessctl -> sudo pacman -S brightnessctl
 [brightness]
@@ -85,10 +58,6 @@ command= ~/.config/i3blocks/brightness
 label=󰃠 
 interval=once
 signal=2
-
-[simple-8]
-full_text=|
-color=#717171
 
 [record-status]
 command= ~/.config/i3blocks/record-status
