--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -4,6 +4,12 @@ separator=true
 separator_block_width=25
 markup=pango
 
+# Requires xtitle from AUR -> yay -S xtitle
+[window]
+label=[]= 
+command= xtitle -s -t 25
+interval=persist
+
 [bandwidth]
 command= ~/.config/i3blocks/bandwidth
 interval=3
