fix(i3blocks): fix issues with formatting by disabling pango markup

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -2,7 +2,7 @@
 # The top properties below are applied to every block, but can be overridden.
 separator=true
 separator_block_width=25
-markup=pango
+# markup=pango
 
 # Requires xtitle from AUR -> yay -S xtitle
 [window]
