update(i3blocks): change text color of window title module

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -9,6 +9,7 @@ separator_block_width=25
 label=[]= 
 command= xtitle -s -t 25
 interval=persist
+color=#A89984
 
 [bandwidth]
 command= ~/.config/i3blocks/bandwidth
